--- a/src/Index.html
+++ b/src/Index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <header class="header">
                 <div class="logo">Your case</div>
-                <div class="sum">Cart total:<span> € 0.00</span></div>
+                <div class="sum">Cart total:<span> 0.00$</span></div>
                 <div class="shop-bag">
                     <svg
                         class="bag"
