feat:Cards of Products

--- a/src/Index.html
+++ b/src/Index.html
@@ -19,10 +19,9 @@
                         width="24"
                         height="24"
                         viewBox="0 0 24 24"
-                        fill="none"
                         xmlns="http://www.w3.org/2000/svg"
                     >
-                        <g clip-path="url(#6wn4mk5tta)" fill="#000">
+                        <g clip-path="url(#6wn4mk5tta)" >
                             <path
                                 d="M23.845 8.224a.533.533 0 0 0-.444-.148h-6.367V5.263a5.034 5.034 0 1 0-10.068 0v2.813H.599c-.178 0-.355 0-.444.148a.504.504 0 0 0-.148.444l2.22 12.142a3.613 3.613 0 0 0 3.495 2.961h12.556a3.643 3.643 0 0 0 3.494-2.99l2.221-12.113a.504.504 0 0 0-.148-.444zM8.15 5.263a3.85 3.85 0 1 1 7.7 0v2.813h-7.7V5.263zm12.438 15.37a2.37 2.37 0 0 1-2.31 1.954H5.722a2.37 2.37 0 0 1-2.31-1.955L1.31 9.261h21.38l-2.102 11.371z"
                             />
@@ -32,7 +31,7 @@
                         </g>
                         <defs>
                             <clipPath id="6wn4mk5tta">
-                                <path fill="#fff" d="M0 0h24v24H0z" />
+                                <path  d="M0 0h24v24H0z" />
                             </clipPath>
                         </defs>
                     </svg>
@@ -75,7 +74,6 @@
                                     <option class="sort__item discount__asc" value="5">sort by discount ASC</option>
                                     <option class="sort__item discount__desc" value="6">sort by discount DESC</option>
                                 </select>
-                                <div class="items__count">Found: <span class="count"></span></div>
                                 <input class="search" type="text" placeholder="search product" />
                             </div>
                             <section class="goods">
